update add field version api more than 1.2 or lower
api.version 1 = มากกว่าเท่ากับ Version 1.2
api.version 0 = น้อยกว่า Version 1.2
and default config version = 1

if (api.version == 1){
use $
}
else{
use .
}

--- a/app/index.html
+++ b/app/index.html
@@ -332,14 +332,15 @@
 
   function defaultLogin() {
 
-    if (!store.get('api')){
+    if (!store.get('api')) {
       store.set({
         'api.job': defaultConfig.api.job,
         'api.job_api': defaultConfig.api.job + '/jobs',
         'api.storages': defaultConfig.api.storages,
         'api.storages_api': defaultConfig.api.storages + '/storage',
         'api.storages_obj_api': defaultConfig.api.storages + '/object',
-        'OAuth.token': ""
+        'OAuth.token': "",
+        'api.version': "1"
       });
       // console.log("no default config");
     }
