--- a/app/src/pages/page-storages.html
+++ b/app/src/pages/page-storages.html
@@ -212,10 +212,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       _loadStoragesComplete(event) {
         let res = event.detail.response;
         if (res){
-          console.log("_loadStoragesComplete complete = ",res);
+          // console.log("_loadStoragesComplete complete = ",res);
         }
         else{
-          console.log("_loadStoragesComplete error = ",event);
+          // console.log("_loadStoragesComplete error = ",event);
         }
      
         this.job_error = false;
