- fix storage error show 401 unauthorize error if invalid token. show 404 if not found - fix page setting drop down option menu select api version
v 1.2
v 1

--- a/app/src/pages/page-setting.html
+++ b/app/src/pages/page-setting.html
@@ -98,8 +98,8 @@
                                         <label for="example-search-input" class="col-12 col-form-label">API Version</label>
                                         <div class="col-12">
                                             <select class="form-control"  value="{{config.api.version::input}}">
-                                                <option value="1">มากกว่าหรือเท่ากับ Version 1.2</option>
-                                                <option value="0">น้อยกว่า Version 1.2</option>
+                                                <option value="1">v 1.2+</option>
+                                                <option value="0">v 1</option>
                                             </select>
 
                                         </div>
