--- a/app/src/common/dashboard-sidemenu.html
+++ b/app/src/common/dashboard-sidemenu.html
@@ -264,8 +264,8 @@
             <div class="form-group">
                 <h6>API Version</h6>
                 <select class="form-control" value="{{config.api.version::input}}">
-                    <option value="1">มากกว่าหรือเท่ากับ Version 1.2</option>
-                    <option value="0">น้อยกว่า Version 1.2</option>
+                    <option value="1">v 1.2+</option>
+                    <option value="0">v 1</option>
                 </select>
             </div>
 
