fix bug storage detail nex , previous button not work show error 401 on job page, and can press reload button

--- a/app/src/common/jobeditor/joblist.html
+++ b/app/src/common/jobeditor/joblist.html
@@ -16,15 +16,18 @@
                 display: block;
                 height: 100%;
             }
+
             .joblist .active-status {
                 color: red;
                 font-size: 20px;
                 position: absolute;
                 top: 9px;
             }
+
             .joblist .active-status[active] {
                 color: green;
             }
+
             vaadin-grid.joblist {
                 height: 100%;
                 border: 0;
@@ -49,6 +52,7 @@
                 }
                 ;
             }
+
             .job-search-input {
                 position: absolute;
                 top: 13px;
@@ -59,11 +63,13 @@
                 height: 32px;
                 width: 200px;
             }
+
             vaadin-grid.material .cell {
                 padding-right: 0 !important;
                 height: 100%;
                 padding-top: 15px;
             }
+
             paper-fab.createJobFab {
                 --paper-fab-background: var(--paper-light-blue-700);
                 position: absolute;
@@ -72,6 +78,7 @@
                 z-index: 100;
                 transition: all 0.3s ease;
             }
+
             paper-fab.OpenJobFab {
                 --paper-fab-background: var(--paper-light-blue-700);
                 position: absolute;
@@ -81,15 +88,18 @@
                 z-index: 100;
                 transition: all 0.3s ease;
             }
+
             vaadin-grid {
                 position: relative;
                 z-index: 0 !important;
             }
+
             vaadin-grid.material paper-checkbox {
                 height: 100%;
                 padding-top: 16px;
                 padding-left: 16px;
-            } 
+            }
+
             #toolbarSelect {
                 background: rgba(47, 50, 58, 0.94);
                 width: 100%;
@@ -100,20 +110,25 @@
                 z-index: 111;
                 transition: all 0.3s ease;
             }
+
             #toolbarSelect paper-button {
                 margin-top: 9px;
                 float: right;
                 margin-right: 10px;
             }
+
             #toolbarSelect[have-select] {
                 bottom: 0;
             }
+
             .createJobFab[have-select] {
                 bottom: 75px;
             }
+
             .OpenJobFab[have-select] {
                 bottom: 75px;
             }
+
             .refreshbt {
                 cursor: pointer;
                 margin-right: 15px;
@@ -122,10 +137,12 @@
                 right: 10px;
                 color: var(--google-grey-700);
             }
+
             .refreshbt.active {
                 animation-name: spin;
                 animation-duration: 0.4s;
             }
+
             @keyframes spin {
                 from {
                     transform: rotate(0deg);
@@ -134,9 +151,11 @@
                     transform: rotate(360deg);
                 }
             }
+
             .jobname {
                 margin-left: 20px;
             }
+
             paper-fab-speed-dial {
                 /* --paper-fab-speed-dial-position: relative; */
                 /* --paper-fab-speed-dial-right: -130px; */
@@ -144,6 +163,7 @@
                 /* z-index: 0 !important; */
                 --paper-fab-speed-dial-background: #0089DD;
             }
+
             paper-fab-speed-dial-action {
                 --paper-fab-speed-dial-action-background: #0089DD;
             }
@@ -214,18 +234,31 @@
         </paper-fab-speed-dial>
 
         <template is="dom-if" if="[[job_error]]">
-            <div style="padding: 85px 15px 0;position: absolute;top: 0;width:100%;height: 100%;background: rgba(239, 239, 239, 0.79);    z-index: 112;">
+            <div style="margin-top:55px;padding: 85px 15px 0;position: absolute;top: 0;width:100%;height: 100%;background: rgba(239, 239, 239, 0.79);    z-index: 112;">
+
                 <div class="alert alert-danger" role="alert" style="width:100%">
-                    <strong>Error !</strong> Can't GET [[jobapi]] , 404 (Not Found), Please go to
-                    <strong>
-                        <a style="color: #aa4644;" href="/setting">Setting</a>
-                    </strong> to set other job api
+                    <template is="dom-if" if="[[isJobError404]]">
+                        <strong>Error !</strong> Can't GET [[storagesapi]], 404 (Not Found), Please go to
+                        <strong>
+                            <a style="color: #aa4644;" href="/setting">Setting</a>
+                        </strong> to set other storages api
+                    </template>
+                    <template is="dom-if" if="[[!isJobError404]]">
+                        [[errorMessage]], Please go to
+                        <strong>
+                            <a style="color: #aa4644;" href="/setting">Setting</a>
+                        </strong> to set Your API Token
+                    </template>
                 </div>
+
+
             </div>
         </template>
         <div id="toolbarSelect" have-select$="[[haveSelect]]">
             <paper-button type="button" class="btn btn-danger" on-click="_deleteBt">Delete (selected [[jobSelected.length]] items)</paper-button>
         </div>
+
+
 
     </template>
 
@@ -236,6 +269,20 @@
                 return {
                     jobLists: {
                         value: []
+                    },
+                    job_error_code: {
+                        type: Number
+                    },
+                    isJobError404: {
+                        type: Boolean
+                    },
+                    errorMessage: {
+                        type: String,
+                        notify: true
+                    },
+                    job_error: {
+                        type: Boolean,
+                        notify: true
                     }
                 };
             }
@@ -252,23 +299,48 @@
                 Polymer.RenderStatus.afterNextRender(this, function () {
                 });
             }
-            _loadJobsComplete(e) {
-                let res = e.detail.response;
-                this.job_error = false;
-                if (this.jobs) {
-                    this.jobLists = [];
-                    var jobLists = this.jobLists;
-                    var material = this.$.material;
+
+
+            async fetchJob() {
+                this.jobLists = [];
+                var jobLists = [];//this.jobLists;
+                var material = this.$.material;
+                return new Promise((res, rej) => {
                     this.jobs.forEach(function (job, index) {
                         $.getJSON(`${this.jobapi}/${encodeURIComponent(job)}`, (data) => {
                             jobLists.push({
                                 "job_id": job,
                                 "active": (data.active === 'true' || data.active == true)
                             });
-                            if (index == this.jobs.length - 1)
+                            if (index == this.jobs.length - 1) {
                                 material.clearCache();
-                        }).fail(function (jqXHR, textStatus, errorThrown) { material.clearCache(); });
+                                res(jobLists);
+                            }
+                        }).fail(function (jqXHR, textStatus, errorThrown) {
+                            material.clearCache();
+                            rej(errorThrown)
+                        });
                     }, this);
+                })
+            }
+            _loadJobsComplete(e) {
+                let res = e.detail.response;
+                this.errorMessage = "";
+                this.job_error = false;
+                this.loading = true;
+                // console.log("start joblist");
+                if (this.jobs) {
+
+                    this.fetchJob()
+                        .then((res) => {
+                            this.jobLists = res;
+                            this.loading = false;
+                            // console.log("end joblist");
+                        }).catch((er) => {
+                            this.loading = false;
+                            // console.log("cache joblist = ",res);
+                        });
+
                     // console.log("_responseJobsEditor : ",this.jobs);
                     // console.log("_responseJobsEditor jobLists : ",this.jobLists);
                     //this.$.material.items = this.jobLists;
@@ -284,6 +356,23 @@
                 this.$.material.activeItem = null;
             }
             _ajexerror(ev) {
+
+                let detail = "" + ev.detail.error;
+
+                if (detail.indexOf("401") >= 0) {
+                    console.log("error job 401 = ", detail);
+                    this.errorMessage = detail;
+                    this.job_error_code = 401;
+                    this.isJobError404 = false;
+
+                    // this.$.dialogError.open();
+                }
+                else {
+                    this.job_error_code = 404;
+                    this.isJobError404 = true;
+                    console.log("error job 404 =", detail);
+                }
+
                 this.jobLists = [];
                 this.$.material.clearCache();
                 this.job_error = true;
@@ -318,6 +407,7 @@
                     this.haveSelect = false;
             }
             _refreshbt(ev) {
+                this.job_error = false;
                 let refreshbt = Polymer.dom(this.root).querySelector('iron-icon.refreshbt');
                 refreshbt.classList.remove('active');
                 refreshbt.classList.add('active');
